WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27022
Repaint issue after layer drops out of composited mode.
https://bugs.webkit.org/show_bug.cgi?id=27022
Summary
Repaint issue after layer drops out of composited mode.
Simon Fraser (smfr)
Reported
2009-07-06 22:49:14 PDT
Created
attachment 32360
[details]
Testcase The attached testcase shows an issue where an element is not correctly repainted after dropping out of compositing mode. To reproduce: 1. Hover over the pink square and wait for the elements to stop transitioning 2. Unhover. 3. Note how the "width" box does not redraw correctly. The issue is that m_repaintRect which is cached inside the RenderLayer was computed relative to the compositing ancestor, and that ancestor changes when the layer ceases to be composited.
Attachments
Testcase
(1.94 KB, text/html)
2009-07-06 22:49 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelogs
(8.22 KB, patch)
2009-07-07 15:41 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-07-07 15:41:42 PDT
Created
attachment 32398
[details]
Patch, testcase, changelogs
mitz
Comment 2
2009-07-07 16:06:13 PDT
Comment on
attachment 32398
[details]
Patch, testcase, changelogs r=me
Simon Fraser (smfr)
Comment 3
2009-07-07 17:19:36 PDT
http://trac.webkit.org/changeset/45613
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug